feat: Cors and profile endpoint
