# api/oas-doc.yaml
@@ -555,8 +555,64 @@ paths:
               schema:
                 $ref: '#/components/schemas/errorModel'
     delete:
-      description: Deletes all the reviews of the given client id
+      description: Deletes all the reviews of the given reviewedClient id
       operationId: deleteReviewsByClientId
+      tags:
+        - Reviews
+      parameters:
+        - name: clientId
+          in: path
+          description: ID of the reviewed client
+          required: true
+          schema:
+            type: string
+        - name: Authorization
+          in: header
+          description: Token needed for authentication
+          schema:
+            type: string
+          required: true
+      responses:
+        '204':
+          description: Reviews deleted
+        default:
+          description: Unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/errorModel'
+  '/api/v1/reviews/author/{clientId}':
+    x-swagger-router-controller: reviewController
+    get:
+      description: Returns all the reviews of the given reviewerClient id
+      operationId: findReviewsByAuthorId
+      tags:
+        - Reviews
+      parameters:
+        - name: clientId
+          in: path
+          description: id of the reviewed client
+          required: true
+          schema:
+            type: string
+      responses:
+        '200':
+          description: Reviews returned
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/reviewResponse'
+        default:
+          description: Unexpected error
+          content:
+            application/json: 
+              schema:
+                $ref: '#/components/schemas/errorModel'
+    delete:
+      description: Deletes all the reviews of the given reviewerClient id
+      operationId: deleteReviewsByAuthorId
       tags:
         - Reviews
       parameters:
